--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "start": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-tsc": "eslint ./src/ --fix && tsc --noEmit",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +52,16 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.5",
+    "@storybook/addon-interactions": "^7.6.5",
+    "@storybook/addon-links": "^7.6.5",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/blocks": "^7.6.5",
+    "@storybook/preset-create-react-app": "^7.6.5",
+    "@storybook/react": "^7.6.5",
+    "@storybook/react-webpack5": "^7.6.5",
+    "@storybook/test": "^7.6.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -70,10 +84,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
+    "lint-staged": ">=10",
     "prettier": "^3.1.1",
     "prop-types": "^15.8.1",
     "storybook": "^7.6.5",
     "tailwindcss": "^3.3.6",
     "webpack": "^5.89.0"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
