--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.1",
